# lightning-image-viewer

./: Cargo.toml  Makefile  README.md  default.nix  derivation.nix  flake.nix  sdl3.nix
.github/workflows/: workflow-release.yaml
share/applications/: lightning-image-viewer.desktop  lightning-viewer.desktop
src/: control.in  image_rs_ffi.h  image_rs_ffi.rs  index.html.in  lightning-image-viewer.exe.manifest  main.rs  viewer.c  viewer.rc  windows_resources.rc
